# kube_fastapi

./: Dockerfile  entrypoint.sh  pyproject.toml
.github/workflows/: test.yaml  workflow.yml
api/: main.py
